--- a/src/app/views/app/app.component.html
+++ b/src/app/views/app/app.component.html
@@ -14,7 +14,7 @@
   <mat-sidenav-content>
     <app-topic-controls></app-topic-controls>
     <mat-divider></mat-divider>
-    <app-topic-pictures></app-topic-pictures>
+    <app-topic-photos></app-topic-photos>
   </mat-sidenav-content>
 </mat-sidenav-container>
 <router-outlet></router-outlet>
