--- a/src/app/components/topics-list/topics-list.component.html
+++ b/src/app/components/topics-list/topics-list.component.html
@@ -1,11 +1,13 @@
 <mat-action-list>
-  <h2>Topics list</h2>
+  <div class="title">Topics list</div>
   <div *ngIf="topicsListLoading$ | async" class="spinner-wrapper">
     <mat-spinner></mat-spinner>
   </div>
-  <button
-    *ngFor="let topic of topics$ | async"
-    mat-list-item
-    (click)="topicClick(topic)"
-  >{{ topic.title }}</button>
+  <ng-container *ngIf="!(topicsListLoading$ | async)">
+    <button
+      *ngFor="let topic of topics$ | async"
+      mat-list-item
+      (click)="topicClick(topic)"
+    >{{ topic.title }}</button>
+  </ng-container>
 </mat-action-list>
