--- a/src/app/components/topics-list/topics-list.component.scss
+++ b/src/app/components/topics-list/topics-list.component.scss
@@ -1,10 +1,10 @@
-h2 {
-  margin-left: 12px;
+.title {
+  margin: 8px 0 8px 16px;
+  font-weight: bold;
 }
 
 .spinner-wrapper {
   text-align: center;
-  position: relative;
   margin-top: 100px;
   .mat-progress-spinner {
     display: inline-block;
