--- a/src/app/components/topic-photos/topic-photos.component.html
+++ b/src/app/components/topic-photos/topic-photos.component.html
@@ -10,7 +10,7 @@
       </picture>
       <mat-card-content>
         <p>
-          {{ photo.description }}
+          {{ photo.description || 'No description...' }}
         </p>
       </mat-card-content>
     </mat-card>
