--- a/src/app/components/topic-photos/topic-photos.component.scss
+++ b/src/app/components/topic-photos/topic-photos.component.scss
@@ -10,6 +10,7 @@
     padding: 12px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     .mat-card {
       width: 200px;
       margin: 24px;
