--- a/src/app/components/topic-controls/topic-controls.component.scss
+++ b/src/app/components/topic-controls/topic-controls.component.scss
@@ -3,4 +3,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  .pagination-controls {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    .page-number {
+      padding: 0 12px;
+    }
+  }
 }
