--- a/src/app/components/topics-list/topics-list.component.html
+++ b/src/app/components/topics-list/topics-list.component.html
@@ -7,6 +7,7 @@
     <button
       *ngFor="let topic of topics$ | async"
       mat-list-item
+      [class.active]="topic.slug === (activeTopic$ | async)?.slug"
       (click)="topicClick(topic)"
     >{{ topic.title }}</button>
   </ng-container>
